@@ -3,6 +3,7 @@
 = GENI Clearinghouse and Portal Release Notes =
 
 == 1.9 ==
+  * Allow for download public SSH key (#655)
   * undefined variables in amstatus with am_id (#648)
   * Login information is wrong in multi-user slices (#645)
   * Save error Omni results (#444)
